<resources>
    <string name="app_name">HDWallet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!--Navigation menu-->
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="receive">Receive</string>
    <string name="history">History</string>
    <string name="addressBook">Address book</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer">Transfer</string>
    <string name="transactions">Transactions</string>
    <string name="information">Information</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Yes, we start with the\n most basic and simple.</string>
    <string name="requirements">Check requirements\nSetup Your profile\nSetup or recover wallet</string>
    <string name="next">Next</string>
    <string name="biometric_user_canceled">ERROR - USER CANCELED</string>
    <string name="biometric_canceled_description">User canceled authentication</string>
    <string name="exit">EXIT</string>
    <string name="try_again">Try again</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="identification">Identification</string>
    <string name="pin_identification_description">Please enter PIN to identify Yourself</string>
    <string name="incorrect_pin_check">Error: PINs You entered are not same</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="enter_pin_again">Enter Your PIN again</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="mail_description">We need Your mail \nbut we promise that we \nare not going to share it</string>
    <string name="mail_title_error">Oh No!</string>
    <string name="verif_mail_desc">Enter confirmation code \nthat we send to \n %1$s</string>
    <string name="resend_ver_code">Send code again</string>
    <string name="mail_verification_title">HDWallet Mail Verification</string>
    <string name="verification_button">Verify</string>
    <string name="incorrect_verification_code">Incorrect verification code</string>
    <string name="mail_title">Sorry to bother you</string>
    <string name="processing_data">We are processing Your data…</string>
    <string name="confirmation">Confirmation</string>
    <string name="wallet_title">Finally some fun</string>
    <string name="wallet_description">Please pick correct option</string>
    <string name="new_wallet">New wallet</string>
    <string name="recover_wallet">Recover wallet</string>
    <string name="new_wallet_thank_you">Thank you for choosing us</string>
    <string name="generate_seed_phrase">Generate seed phrase</string>
    <string name="new_wallet_description">Write down seed phrase and keep it safe! With it anybody can access Your wallet and You can\'t recover it without them.</string>
    <string name="new_wallet_notice">BE SURE TO WRITE THEM DOWN BEFORE PROCEED</string>
    <string name="confirm_wallet_title">Last but not least</string>
    <string name="confirm_wallet_description">Rewrite seed phrase that You wrote down in the previous step</string>
    <string name="create_wallet">Create wallet</string>
    <string name="generate_new_seed">Generate new seed</string>
    <string name="incorrect_seed">Incorrect seed phrase entered</string>
    <string name="creating_wallet">Creating wallet…</string>
    <string name="pick_correct_option">Pick correct option</string>
    <string name="checking">Checking…</string>
    <string name="wallet_dialog">Are you sure that you wrote seed phrase down? \nYou won\'t be able to recover wallet without it!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_done">A\nl\nl\n \nd\no\nn\ne\n</string>
    <string name="warning">Warning</string>

</resources>
