<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item android:title="@string/transfer">
        <menu>
            <item
                android:id="@+id/payFragment"
                android:icon="@drawable/ic_pay"
                android:title="@string/pay"
                />

            <item
                android:id="@+id/receiveFragment"
                android:icon="@drawable/ic_recieve"
                android:title="@string/receive"
                />
        </menu>
    </item>

    <item android:title="@string/transactions">
        <menu>
            <item
                android:id="@+id/historyFragment"
                android:icon="@drawable/ic_history"
                android:title="@string/history"
                />

            <item
                android:id="@+id/addressBookFragment"
                android:icon="@drawable/ic_address"
                android:title="@string/addressBook"
                />
        </menu>
    </item>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_about"
                android:title="@string/about"
                />

            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                />
        </menu>
    </item>

</menu>