<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/welcome_background"
    android:padding="10dp">

    <ImageView
        android:id="@+id/mailImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/warning"
        android:layout_marginBottom="20dp"
        android:gravity="center" />
    <TextView
        android:id="@+id/dialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gabriela"
        android:gravity="center"
        android:text="@string/wallet_dialog"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/dialogCancelBtn"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/dialogConfirmBtn"
            android:text="@string/confirm"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>