<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_background"
    tools:context=".fragments.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/gabriela"
            android:text="@string/welcome_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/requirements"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/welcomeButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/next"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/gabriela"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/welcome_button_background"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="240dp"
            android:layout_height="190dp"
            android:src="@drawable/welcome"
            app:layout_constraintTop_toBottomOf="@+id/requirements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>