<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/welcome_background"
    tools:context=".fragments.welcome.MailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/gabriela"
            android:text="@string/mail_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/mail_description"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailTitle" />

        <EditText
            android:id="@+id/enteredMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailDescription"/>

        <Button
            android:id="@+id/mailButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/next"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/gabriela"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enteredMail"
            android:background="@color/welcome_button_background"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/mailButtonVerify"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/verify"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/gabriela"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailButton"
            android:background="@color/welcome_button_background"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/verifyMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/verif_mail_desc"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailButtonVerify" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>