<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/welcome_background"
    tools:context=".fragments.welcome.NewWalletFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/new_wallet_loading_spinner"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/newWalletTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/gabriela"
            android:text="@string/new_wallet_thank_you"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newWalletDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/new_wallet_description"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newWalletTitle" />

        <Button
            android:id="@+id/newWalletVerifyButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop = "40dp"
            android:background="@color/welcome_button_yellow"
            android:fontFamily="@font/gabriela"
            android:text="@string/generate_seed_phrase"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newWalletDescription" />

        <TextView
            android:id="@+id/seedPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newWalletVerifyButton" />

        <ImageView
            android:id="@+id/newWalletImage"
            android:layout_width="240dp"
            android:layout_height="190dp"
            android:src="@drawable/bitcoins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="40dp"
            android:gravity="center" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>