<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/welcome_background"
    tools:context=".fragments.welcome.NewWalletConfirmFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/confirm_wallet_loading_spinner"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/confirmWalletTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/gabriela"
            android:text="@string/confirm_wallet_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirmWalletDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/confirm_wallet_description"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmWalletTitle" />


        <LinearLayout
            android:id="@+id/firstFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmWalletDescription"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/word1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/firstFour"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/word5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/secondFour"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/word9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/word12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/confirmWalletVerifyButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop = "40dp"
            android:background="@color/welcome_button_yellow"
            android:fontFamily="@font/gabriela"
            android:text="@string/create_wallet"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdFour" />

        <Button
            android:id="@+id/confirmWalletNewCode"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop = "20dp"
            android:background="@color/welcome_button_red"
            android:fontFamily="@font/gabriela"
            android:text="@string/generate_new_seed"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmWalletVerifyButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>